<resources>
    <string name="app_name">SATRASIA</string>
    <string name="action_go">Lanjut</string>
    <string name="summarize_label">Tanyakan Apapun</string>
    <string name="summarize_hint">Supported from Gemini-API</string>
    <string name="gemini_api">AIzaSyAqz5JOvalZgqiEQwTPk8yE3RD9XAaHspk</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="title_activity_home">Home</string>
    <string name="welcome_message">Selamat Datang, %1$s</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="place_holder">place_holder</string>
    <string name="checkbox">CheckBox</string>
    <string name="tambah">Tambah</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="maps_tracking">Maps Tracking</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="back">Back</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="satrasia_apps">SATRASIA APPS</string>
    <string name="logo_satrasia">Logo SATRASIA</string>
    <string name="developer">Developer</string>
    <string name="photo_developer">Photo Developer</string>
    <string name="rangga">Rangga</string>
    <string name="photo_github">photo_github</string>
    <string name="github">Github</string>
    <string name="deskripsi_aplikasi">Deskripsi Aplikasi</string>
    <string name="desc_aplikasi">           Satrasia adalah sebuah aplikasi inovatif yang dibangun dengan menggunakan Android Studio dan menggunakan bahasa pemrograman Java. Aplikasi ini bertujuan untuk memberikan bantuan kepada penyandang demensia dalam menjalankan aktivitas sehari-hari mereka.\n          Dengan memanfaatkan teknologi Internet of Things (IoT), Satrasia dapat menjadi mitra yang sangat berguna bagi para pengguna dengan kebutuhan khusus ini.</string>
    <string name="tools">Tools</string>
    <string name="kotlin">Kotlin</string>
    <string name="img_kotlin">img_kotlin</string>
    <string name="img_android_studio">img_android_studio</string>
    <string name="android_studio">Android\n Studio</string>
    <string name="firebase">Firebase</string>
    <string name="img_firebase">img_firebase</string>
    <string name="img_mysql">img_mysql</string>
    <string name="mysql">MySQL</string>
    <string name="img_iot">img_iot</string>
    <string name="iot">Internet\nof\nThings</string>
    <string name="img_google">img_google</string>
    <string name="maps_api">Maps APi</string>
    <string name="img_cpanel">img_cpanel</string>
    <string name="cpanel">cPanel</string>
    <string name="php">PHP\nLanguage</string>
    <string name="img_php">img_php</string>
    <string name="kelola_akun">Kelola Akun</string>
    <string name="nama">*Nama</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="simpan">Simpan</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="email">*Email</string>
    <string name="masukkan_no_telp">Masukkan No.Telp</string>
    <string name="no_telp">*No.Telp</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="atau">Atau</string>
    <string name="kontak_darurat">Kontak Darurat</string>
    <string name="img_logo">img_logo</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_reset_password">Silahkan masukkan email pada saat registrasi untuk pengiriman kode verifikasi.</string>
    <string name="kirim_email">Kirim Email</string>
    <string name="img_maps">img_maps</string>
    <string name="masuk">Masuk</string>
    <string name="text_login"><![CDATA[Masuk menggunakan Username & Password untuk lanjut verifikasi]]></string>
    <string name="password">*Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="lupa_password">Lupa password</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="img_circle2">img_circle2</string>
    <string name="masuk_atau_daftar">Masuk atau Daftar</string>
    <string name="text_main">Untuk kali pertama Anda, pilih register untuk membuat akun. Jika sudah memiliki akun, silahkan login.</string>
    <string name="img_logo_animated">img_logo_animated</string>
    <string name="img_circle">img_circle</string>
    <string name="text_register">Masukkan data untuk melanjutkan mendaftar</string>
    <string name="confirm_password">*Confirm Password</string>
    <string name="masukkan_ulang_password">Masukkan Ulang Password</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="img_sos">img_sos</string>
    <string name="img_arrow">img_arrow</string>
    <string name="img_developer">img_developer</string>
    <string name="tentang_aplikasi1">Tentang Aplikasi</string>
    <string name="img_manage_account">img_manage_account</string>
    <string name="logout">Logout</string>
    <string name="img_bot">img_bot</string>
    <string name="text_welcome">Selamat Datang !</string>
    <string name="img_logo2">img_logo2</string>
    <string name="tambah_kontak">Tambah Kontak</string>
    <string name="nama_normal">nama</string>
    <string name="nomor_telepon_normal">Nomor Telepon</string>
    <string name="batal">Batal</string>
    <string name="tambah_pengingat">Tambah Pengingat</string>
    <string name="deskripsi_normal">Deskripsi</string>
    <string name="set_jam">Set Jam</string>
    <string name="ubah_foto">Ubah Foto</string>
    <string name="hapus_foto">Hapus Foto</string>
</resources>