<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:translationZ="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk_atau_daftar"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/satrasia_apps"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:textSize="13sp"/>


    </LinearLayout>



    <ImageView
        android:id="@+id/logo_animated"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/img_logo_animated"
        android:layout_gravity="center"
        android:contentDescription="@string/img_logo_animated" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/text_main"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="20dp"
        android:translationZ="3dp">
        <Button
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_gradient_violet"
            android:text="@string/masuk"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:textSize="17sp"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_gradient_pink"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <ImageView
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:src="@drawable/vector_circle2"
        android:layout_marginTop="-100dp"
        android:translationZ="2dp"
        android:layout_marginStart="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/img_circle2" />

    <ImageView
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-500dp"
        android:src="@drawable/vector_circle"
        android:translationZ="1dp"
        android:contentDescription="@string/img_circle2" />


</LinearLayout>
