<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyContact"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/vector_arrow_back"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontak_darurat"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_rounded_full_dark_200_10"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/bg_rounded_full_dark_200_10"
                android:fillViewport="true"
                android:layout_marginTop="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contactRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_rounded_full_dark_200_10" />

            </ScrollView>
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/newButtonContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/violet_900"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/tambah"
            android:textColor="@color/white"
            app:icon="@drawable/vector_add"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/CustomShapeAppearance" />


    </LinearLayout>
</LinearLayout>